# ShmitWare

./: .clang-format  CMakeLists.txt  LICENSE  funny-notes.txt
Development/: PacketTest.cpp
Development/Core/: CMakeLists.txt
Development/Core/Help/: RoutineLogic.cpp
Development/Core/IO/Session/: Transference.cpp
Development/Core/Platform/: CMakeLists.txt  Clock.cpp
Development/Core/Test/: CMakeLists.txt
Development/Core/Test/Include/Core/Mocks/IO/Session/: MockInbound.hpp  MockOutbound.hpp
Development/Core/Test/Source/Data/: Help.hpp  TestDecode.cpp  TestEncode.cpp  TestFields.cpp  TestPacket.cpp
Development/Core/Test/Source/IO/Session/: TestEgress.cpp  TestIngress.cpp
Development/Core/Test/Source/Math/: CMakeLists.txt  TestRatio.cpp
Development/Include/Core/: Result.hpp  Span.hpp  StdTypes.hpp  StringConstant.hpp
Development/Include/Core/Data/: Decode.hpp  Encode.hpp  Field.hpp  Footprint.hpp  Packet.hpp  Primitives.hpp  Tuple.hpp
Development/Include/Core/Data/_Detail/: Field.hpp  Packet.hpp  Tuple.hpp
Development/Include/Core/Help/: RoutineLogic.hpp
Development/Include/Core/IO/: Input.hpp  Output.hpp
Development/Include/Core/IO/Serial/: Channel.hpp
Development/Include/Core/IO/Session/: Egress.hpp  Inbound.hpp  Ingress.hpp  Outbound.hpp  Transference.hpp
Development/Include/Core/IO/Session/_Detail/: Egress.hpp
Development/Include/Core/Math/: Denomination.hpp  Memory.hpp  Ratio.hpp  StdAlgorithms.hpp
Development/Include/Core/System/: Fundamental.hpp  SteadyClock.hpp
Development/Include/Core/Time/: Timer.hpp
Development/Port/Native/System/: SteadyClockImpl.hpp
Development/Port/Zephyr/System/: SteadyClockImpl.cpp  SteadyClockImpl.hpp
Development/ShmitCore/: CMakeLists.txt  PacketTest  PacketTest.cpp
Development/ShmitCore/CMake/: Platform.cmake
Development/ShmitCore/Include/ShmitCore/: Result.hpp  Span.hpp  StdTypes.hpp  StringConstant.hpp
Development/ShmitCore/Include/ShmitCore/Data/: Decode.hpp  Encode.hpp  Field.hpp  Footprint.hpp  Packet.hpp
Development/ShmitCore/Include/ShmitCore/Data/_Detail/: Field.hpp  Packet.hpp
Development/ShmitCore/Include/ShmitCore/Help/: RoutineLogic.hpp
Development/ShmitCore/Include/ShmitCore/IO/: Input.hpp  Output.hpp
Development/ShmitCore/Include/ShmitCore/IO/Serial/: Channel.hpp
Development/ShmitCore/Include/ShmitCore/IO/Session/: Egress.hpp  Inbound.hpp  Ingress.hpp  Outbound.hpp  Transference.hpp
Development/ShmitCore/Include/ShmitCore/IO/Session/_Detail/: Ingress.hpp
Development/ShmitCore/Include/ShmitCore/Math/: Memory.hpp  Ratio.hpp  StdAlgorithms.hpp
Development/ShmitCore/Include/ShmitCore/Platform/: Clock.hpp
Development/ShmitCore/Include/ShmitCore/System/: Fundamental.hpp  Thread.hpp
Development/ShmitCore/Include/ShmitCore/Time/: Duration.hpp  Timer.hpp
Development/ShmitCore/Source/: CMakeLists.txt
Development/ShmitCore/Source/Help/: CMakeLists.txt  RoutineLogic.cpp
Development/ShmitCore/Source/IO/: CMakeLists.txt
Development/ShmitCore/Source/IO/Session/: Transference.cpp
Development/ShmitCore/Source/Platform/: Clock.cpp
Development/ShmitCore/Test/: CMakeLists.txt
Development/ShmitCore/Test/Include/ShmitCore/Mocks/IO/Session/: MockInbound.hpp  MockOutbound.hpp
Development/ShmitCore/Test/Source/: CMakeLists.txt
Development/ShmitCore/Test/Source/Data/: CMakeLists.txt  Help.hpp  TestDecode.cpp  TestEncode.cpp  TestFields.cpp  TestPacket.cpp
Development/ShmitCore/Test/Source/IO/: CMakeLists.txt
Development/ShmitCore/Test/Source/IO/Session/: TestEgress.cpp  TestIngress.cpp
Development/ShmitCore/Test/Source/Math/: TestRatio.cpp
Development/ShmitPort/Include/ShmitPort/System/: Clock.hpp
Development/ShmitPort/Source/Port/Native/System/: Clock.cpp
